--- a/WebContent/css/style_1.css
+++ b/WebContent/css/style_1.css
@@ -6,22 +6,32 @@
 
 
 
-a:link{	
-	color:#0054a6;
-	text-decoration:none;
-}
 
 
- 
+
 #wrap{
+	z-index:1;
 	top:0px;
 	margin:0px auto;
 	width:100%;
-	height:120px;
+	height:140px;
 	border-bottom: 1px solid #d9d9d9;
 	text-align: center;
+	background: #ffffff;
 }
 
+.menu_top{
+	width:100%;
+	height:20px;
+	border-bottom: 1px solid #d9d9d9;
+	background: linear-gradient( to right, #FF7100, #FF9900 );
+}
+.menu_top a{
+	float: right;
+	margin-right:160px;
+	color:#ffffff;
+
+}
 .menu{
 	width:100%;
 	height:70px;
@@ -109,7 +119,7 @@ a:link{
 	width:auto;
 	background:url(../images/bottom-dotted.gif) right no-repeat;
 	display:inline;
-	color:#d9d9d9;
+	color:#A6A6A6;
 	font-size:14px;
 	padding:3px 10px;
 }
@@ -129,42 +139,84 @@ a:link{
 }
 
 
-#custom-search-input{
-	margin-top:5px;
-	margin-left:250px;
-	width:400px;
-    padding: 3px;
-    border: 2px solid #FF7100;
-    border-radius: 6px;
-    background-color: #fff;
-   
-}
+#search-body,
+#search-body #s-form-body,
+#search-body #s-form-body #s-form,
+#search-body #s-btn-body,
+#search-body #s-btn-body #s-btn {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 30px;
+  line-height: 30px; }
 
-#custom-search-input input{
-    border: 0;
-    box-shadow: none;
-    
-}
 
-#custom-search-input button{
-    margin: 2px 0 0 0;
-    background: none;
-    box-shadow: none;
-    border: 0;
-    color: #FF7100;
-    padding: 0 8px 0 10px;
-    border-left: solid 1px #ccc;
-}
+#search-body { 
+	margin-top:7px;
+	margin-left:350px;
+	width:320px; 
+	
+	}
+#search-body #s-form-body {
+  overflow: hidden;
+  border: 2px solid #FF7100;
+  
+   }
 
-#custom-search-input button:hover{
-    border: 0;
-    box-shadow: none;
-    border-left: solid 1px #ccc;
-}
+#search-body #s-form-body #s-form {
+  line-height: 16px;
+  width: 100%;
+  padding: 0 4px;
+  font-size: 16px;
+  font-family: Roboto, arial, sans-serif;
+  border: 1px solid #ccc;
+  border-right: none;
+  box-shadow: inset 0 1px 0 #eee;
+  border-radius: 2px 0 0 2px;
+  background-color: #fff;
+  float: left; }
 
-#custom-search-input .glyphicon-search{
-    font-size: 23px;
-}
+#search-body #s-form-body #s-form:focus { border-color: #47b98f; }
+
+#search-body #s-btn-body {
+  cursor: pointer;
+  border-radius: 0 2px 2px 0;
+  border: solid 1px #FF7100;
+  background: #FF7100;
+  float: right; }
+
+#search-body #s-btn-body:hover,
+#search-body #s-btn-body:active {
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out; }
+
+#search-body #s-btn-body:hover {
+  border-color: #37a97f;
+  background-color: #37a97f; }
+
+#search-body #s-btn-body:active {
+  outline: none;
+  border-color: #1b8d6d;
+  background-color: #1b8d6d; }
+
+#search-body #s-btn-body #s-btn {
+   border: none;
+   display: block;
+   opacity: .9;
+   background: url("../image/search_w.png") center center no-repeat;
+   width: 50px;
+   height: 28px; }
+
+/* For Smartphone */
+@media only screen and (max-width: 480px) {
+  #search-body #s-btn-body:hover {
+    border-color: #47b98f;
+    background-color: #47b98f; } }
 
 
 
